assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --background: 0 0% 100%;
        --foreground: 240 10% 3.9%;
        --card: 0 0% 100%;
        --card-foreground: 240 10% 3.9%;
        --popover: 0 0% 100%;
        --popover-foreground: 240 10% 3.9%;
        --primary: 240 5.9% 10%;
        --primary-foreground: 0 0% 98%;
        --secondary: 240 4.8% 95.9%;
        --secondary-foreground: 240 5.9% 10%;
        --muted: 240 4.8% 95.9%;
        --muted-foreground: 240 3.8% 46.1%;
        --accent: 240 4.8% 95.9%;
        --accent-foreground: 240 5.9% 10%;
        --border: 240 5.9% 90%;
        --input: 240 5.9% 90%;
        --ring: 240 5% 64.9%;
        --radius: 0.5rem;
    }

    .dark {
        --background: 240 10% 3.9%;
        --foreground: 0 0% 98%;
        --card: 240 10% 3.9%;
        --card-foreground: 0 0% 98%;
        --popover: 240 10% 3.9%;
        --popover-foreground: 0 0% 98%;
        --primary: 0 0% 98%;
        --primary-foreground: 240 5.9% 10%;
        --secondary: 240 3.7% 15.9%;
        --secondary-foreground: 0 0% 98%;
        --muted: 240 3.7% 15.9%;
        --muted-foreground: 240 5% 64.9%;
        --accent: 240 3.7% 15.9%;
        --accent-foreground: 0 0% 98%;
        --border: 240 3.7% 15.9%;
        --input: 240 3.7% 15.9%;
        --ring: 240 4.9% 83.9%;
    }
}

@layer base {
    @font-face {
        font-family: inter-variable;
        font-style: normal;
        font-weight: 100 900;
        font-display: swap;
        src: url("../fonts/inter/inter-variable.woff2") format("woff2");
    }

    @font-face {
        font-family: inter-variable;
        font-style: italic;
        font-weight: 100 900;
        font-display: swap;
        src: url("../fonts/inter/inter-variable-italic.woff2") format("woff2");
    }

    @font-face {
        font-family: jetbrainsmono-variable;
        font-style: normal;
        font-weight: 100 800;
        font-display: swap;
        src: url("../fonts/jetbrainsmono/jetbrainsmono-variable.woff2") format("woff2");
    }

    @font-face {
        font-family: jetbrainsmono-variable;
        font-style: italic;
        font-weight: 100 800;
        font-display: swap;
        src: url("../fonts/jetbrainsmono/jetbrainsmono-variable-italic.woff2") format("woff2");
    }

    @font-face { font-family: "inter"; font-style: normal; font-weight: 100; font-display: swap; src: url("../fonts/inter/inter-thin.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: italic; font-weight: 100; font-display: swap; src: url("../fonts/inter/inter-thin-italic.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: normal; font-weight: 200; font-display: swap; src: url("../fonts/inter/inter-extralight.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: italic; font-weight: 200; font-display: swap; src: url("../fonts/inter/inter-extralight-italic.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: normal; font-weight: 300; font-display: swap; src: url("../fonts/inter/inter-light.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: italic; font-weight: 300; font-display: swap; src: url("../fonts/inter/inter-light-italic.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: normal; font-weight: 400; font-display: swap; src: url("../fonts/inter/inter-regular.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: italic; font-weight: 400; font-display: swap; src: url("../fonts/inter/inter-italic.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: normal; font-weight: 500; font-display: swap; src: url("../fonts/inter/inter-medium.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: italic; font-weight: 500; font-display: swap; src: url("../fonts/inter/inter-medium-italic.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: normal; font-weight: 600; font-display: swap; src: url("../fonts/inter/inter-semibold.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: italic; font-weight: 600; font-display: swap; src: url("../fonts/inter/inter-semibold-italic.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: normal; font-weight: 700; font-display: swap; src: url("../fonts/inter/inter-bold.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: italic; font-weight: 700; font-display: swap; src: url("../fonts/inter/inter-bold-italic.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: normal; font-weight: 800; font-display: swap; src: url("../fonts/inter/inter-extrabold.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: italic; font-weight: 800; font-display: swap; src: url("../fonts/inter/inter-extrabold-italic.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: normal; font-weight: 900; font-display: swap; src: url("../fonts/inter/inter-black.woff2") format("woff2"); }
    @font-face { font-family: "inter"; font-style: italic; font-weight: 900; font-display: swap; src: url("../fonts/inter/inter-black-italic.woff2") format("woff2"); }

    @font-face { font-family: "jetbrainsmono"; font-style: normal; font-weight: 100; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-thin.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: italic; font-weight: 100; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-thin-italic.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: normal; font-weight: 200; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-extralight.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: italic; font-weight: 200; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-extralight-italic.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: normal; font-weight: 300; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-light.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: italic; font-weight: 300; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-light-italic.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: normal; font-weight: 400; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-regular.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: italic; font-weight: 400; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-italic.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: normal; font-weight: 500; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-medium.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: italic; font-weight: 500; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-medium-italic.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: normal; font-weight: 600; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-semibold.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: italic; font-weight: 600; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-semibold-italic.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: normal; font-weight: 700; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-bold.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: italic; font-weight: 700; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-bold-italic.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: normal; font-weight: 800; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-extrabold.woff2") format("woff2"); }
    @font-face { font-family: "jetbrainsmono"; font-style: italic; font-weight: 800; font-display: swap; src: url("../fonts/jetbrainsmono/jetbrainsmono-extrabold-italic.woff2") format("woff2"); }

    :root {
        font-family: 'inter', sans-serif;
    }

    @supports (font-variation-settings: normal) {
        :root {
            font-family: "inter-variable", sans-serif;
            font-optical-sizing: auto; 
        }
    }

    code, kbd, samp, pre {
        font-family: 'jetbrainsmono', monospace;
    }

    @supports (font-variation-settings: normal) {
        code, kbd, samp, pre {
            font-family: 'jetbrainsmono-variable', monospace;
            font-optical-sizing: auto; 
        }
    }

    * {
        @apply border-border;
    }

    html {
        scroll-behavior: smooth;
    }

    body {
        @apply bg-background text-foreground;
        font-synthesis-weight: none;
        text-rendering: optimizeLegibility;
    }

    .dark {
        color-scheme: dark;
    }
}

@layer utilities {
    .step {
        counter-increment: step;
    }

    .step:before {
        @apply absolute w-9 h-9 bg-muted rounded-full font-mono font-medium text-center text-base inline-flex items-center justify-center -indent-px border-4 border-background;
        @apply ml-[-50px] mt-[-4px];
        content: counter(step);
    }
}

pre {
    color: hsl(var(--foreground));
    display: flex;
    border-radius: var(--radius);
    background-color: hsl(var(--background));
    border-width: 1px;
    position: relative;
    font-size: small;
    line-height: 1.7;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    overflow-x: auto;
    padding: 1em 1.5em;
}

pre > button {
    position: sticky;
    display: none;
    align-items: center;
    background-color: hsl(var(--background));
    justify-content: center;
    height: 2rem;
    width: 2rem;
    min-width: 2rem;
    top: 0.5rem;
    right: 0.5rem;
    cursor: pointer;
    border-radius: calc(var(--radius) - 2px);
    transition-property: color, background-color;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
    opacity: 0;
    transition: opacity 0.3s ease;
}

pre:hover > button {
    opacity: 1;
}

pre > button:hover {
    color: hsl(var(--accent-foreground));
    background-color: hsl(var(--accent));
}

pre > button > span {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0;
}

code {
    color: hsl(var(--foreground));
    font-size: small;
    line-height: 1.7;
    flex: 1;
    align-content: center;
}

pre > code > .k,
pre > code > .kd,
pre > code > .kp,
pre > code > .kt,
pre > code > .kr {
    font-weight: bold;
}

pre > code > .s,
pre > code > .s1,
pre > code > .s2,
pre > code > .str,
pre > code > .sb {
    color: hsl(240, 5%, 64.9%);
}

pre > code > .c,
pre > code > .c1,
pre > code > .c2,
pre > code > .cm,
pre > code > .cp,
pre > code > .cpf {
    color: hsl(240, 5%, 64.9%);
    font-style: italic;
}

hr {
    border-color: hsl(var(--border));
    border-top-width: 1px;
    margin-top: 3em;
    margin-bottom: 3em;
}

@media (max-width: 640px) {
    .container {
        @apply px-4;
    }
}

